# oz

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/oz-core/: Cargo.toml
crates/oz-core/src/: harmony.rs  lib.rs  mutation.rs  stemmer.rs  suffix.rs  types.rs
crates/oz-dict/: Cargo.toml
crates/oz-dict/src/: lib.rs
crates/oz-ml/: Cargo.toml
crates/oz-ml/src/: lib.rs
crates/oz-service/: Cargo.toml
crates/oz-service/src/: main.rs
data/suffix-tables/: derivational.toml  noun-inflection.toml  verb-inflection.toml
data/test-corpus/: ground-truth.tsv
scripts/: eval_accuracy.py  gen_corpus.py
wasm/: Cargo.toml
wasm/src/: lib.rs
