[workspace]
resolver = "2"
members = [
    "crates/oz-core",
    "crates/oz-ml",
    "crates/oz-dict",
    "crates/oz-service",
    "cli",
    "wasm",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Öz Contributors"]
license     = "Apache-2.0"
repository  = "https://github.com/oz-stemmer/oz"
homepage    = "https://github.com/oz-stemmer/oz"
keywords    = ["turkish", "nlp", "stemmer", "morphology", "text"]
categories  = ["text-processing", "algorithms"]

[workspace.dependencies]
oz-core = { path = "crates/oz-core" }
oz-dict = { path = "crates/oz-dict" }

rayon    = "1.10"
serde    = { version = "1", features = ["derive"] }
thiserror = "2"
fst      = "0.4"
ort      = { version = "2", default-features = false, features = ["copy-dylibs"] }

[profile.release]
lto           = "fat"
codegen-units = 1
strip         = true

[profile.bench]
inherits  = "release"
strip     = false
debug     = true
